<resources>
    <string name="app_name">ToMe-AOS</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="landing_step1">당신의 영원한 단짝\n티오를 만나보세요.</string>
    <string name="landing_slide">옆으로 슬라이드 >>></string>
    <string name="landing_step2">당신은 누구인가요?</string>
    <string name="landing_step2_sub">하루에 한 번, 나를 돌아볼 수 있는 질문에 답해 보세요.</string>
    <string name="landing_step3">오늘 하루는 어땠나요?</string>
    <string name="landing_step3_sub">날씨, 감정, 일까지 다이어리에 쉽게 담아봐요.</string>
    <string name="landing_step4">티오랑 대화해보세요!</string>
    <string name="landing_step4_sub">심리 상담가 티오가 당신의 이야기를 들어줄 거예요.</string>
    <string name="landing_step5">미션을 수행하면\n 티오가 성장할 수 있어요.</string>
    <string name="landing_button">티오와 함께 투미 시작하기</string>

    <string name="login_kakao">카카오톡으로 로그인</string>
    <string name="login_google">Google로 로그인</string>
    <string name="login_visitor">
        <u>회원가입 없이 둘러보기</u>
    </string>

    <string name="btn_close">닫기</string>

    <string name="navi_home">홈</string>
    <string name="navi_diary">일기</string>

    <string name="to_start_Talk">티오랑\n대화하기</string>
    <string name="check_mission">오늘의 미션\n확인하기</string>

    <string name="toMe">To ME</string>
    <string name="exam_main_text">몽이야,\n오늘도 나랑 대화하자</string>

    <string name="title_mission">미션</string>
    <string name="today_mission">오늘의 미션 수행 현황</string>
    <string name="mission_title_photo">힐링 미션 (워딩)</string>
    <string name="mission_title_text">글쓰기 미션</string>
    <string name="mission_title_decibel">데시벨 미션</string>
    <string name="mission_body">행복 나무 찍어보기</string>

    <string name="mission_diary_detail">오늘 하루를 되돌아보고, 감사일기를 적어보세요.</string>
    <string name="text_field_explain">이곳을 클릭하여 작성하세요.\n최대 85자까지 작성할 수 있어요.</string>

    <string name="measure_decibel">데시벨을 측정하고 있어요.\n마음껏 소리 지르세요!</string>

    <string name="good_job">오늘 하루도 수고 많았어요 :)</string>
    <string name="complete_text_mission">오늘의 글쓰기 미션 완료</string>

    <string name="show_tome">티오에게 보여주기</string>
    <string name="go_mission">미션 수행하러 가기</string>
    <string name="back_mission">다른 미션 보러 가기</string>

    <string name="back_textfield">다시 작성하기</string>
    <string name="back_decibel">데시벨 다시 측정하기</string>

    <string name="other_mission">다음 미션 수행하기</string>
    <string name="back_home">홈으로 돌아가기</string>

    <string name="do_today_mission">오늘의 미션을 수행해 보세요.</string>

    <string name="todays_archive">오늘의 아카이브를 작성해볼까요?</string>
    <string name="save_archive">저장 완료하기</string>
    <string name="save_sure">오늘의 아카이브를 저장할까요?</string>
    <string name="save_warn">저장된 아카이브는 수정이 불가해요.</string>
    <string name="save_yes">네, 저장할게요.</string>
    <string name="save_no">아니요, 수정할래요.</string>
    <string name="already_archive">오늘의 아카이브를 작성했어요.</string>
    <string name="check_archive">확인하기</string>

    <string name="write_diary">작성하러 가기</string>
    <string name="next_stage">다음 단계로 넘어가기</string>
    <string name="ready_diary">오늘의 일기\n작성할 준비 됐어?!</string>
    <string name="answer_to">티오에게 힘차게 대답해주세요.</string>
    <string name="start_write">일의\n일기 작성 시작!</string>
    <string name="sure">당연하지!</string>
    <string name="diary_write_start">일기 작성 시작하기</string>
    <string name="good">굿! 👍</string>

    <string name="talk_with_TO">티오랑 대화하기</string>
    <string name="start_chat">티오와 대화 시작하기</string>
    <string name="end_chat">대화 마치기</string>
    <string name="chat_intro1">저랑 대화해요!\n오늘 하루는 어떠셨나요?</string>
    <string name="chat_intro2">티오는 당신의 이야기를 들을 준비가 되어 있어요.</string>
    <string name="chat_inst">심리상담가 티오는 당신의 일상이 궁금해요.\n티오에게 오늘 있었던 일을 얘기해 주세요.\n티오는 chat GPT ~~를 ~~하고 있습니다.</string>
    <string name="chat_mission_added">오늘의 미션이\n모두 추가되었어요.</string>
    <string name="visitor">로그인 시 더 많은 기능을 사용할 수 있어요.\n티오의 친구가 되어 보세요!</string>
    <string name="sign_in">회원가입</string>

    <string name="statistics">통계</string>
    <string name="statistics_analyzed">티오가 몽이 13월을 분석했어요.</string>
    <string name="stats_keyword">월간 키워드 분석</string>
    <string name="stats_emotion">월간 감정 분석</string>
    <string name="stats_mission_progress">미션 수행 현황</string>

    <string name="mypage">마이페이지</string>
    <string name="mypage_notification">알림설정</string>
    <string name="mypage_mission_record">내 미션 기록보기</string>
    <string name="mypage_setting">환경 설정</string>
    <string name="mypage_qna">문의하기</string>
    <string name="notification_bool">알림 여부</string>
    <string name="notification_explain">투미와 지속적으로 대화하고 싶다면\n알림설정을 통해 상황을 전달드려요!</string>
    <string name="qna_explain">\‘from US\' 카카오톡 플러스친구를 추가해 문의해주세요.\n문의 답변 시간 : 평일 오전 9시 ~ 오후 5시</string>
    <string name="mypage_account_setting">계정 설정</string>
    <string name="mypage_privacy_policy">개인정보처리방침</string>
    <string name="kakao_plus_friend">카카오톡 플러스친구 보러가기</string>
    <string name="nickname">닉네임</string>
    <string name="nickname_mod">닉네임 수정</string>

    <string name="neutral_emotion">일반적인 감정을 가장 많이 느꼈어요</string>
    <string name="positive_emotion">긍정적인 감정을 가장 많이 느꼈어요</string>
    <string name="negative_emotion">부정적인 감정을 가장 많이 느꼈어요</string>
    <string name="default_emotion">감정 분석을 위해서 티오와 대화해주세요!</string>

</resources>