<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
        android:id="@+id/frame_mypage"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
        <TextView
                android:id="@+id/tv_mypage"
                android:layout_width="96dp"
                android:layout_height="34dp"
                android:gravity="center"
                android:text="@string/mypage"
                android:textAppearance="@style/new_body1"
                android:textColor="@color/color_font1"
                android:layout_marginTop="63dp"
                android:layout_marginStart="20dp"/>
        <Button
                android:id="@+id/btn_mission_record"
                android:layout_width="321dp"
                android:layout_height="61dp"
                android:text="@string/mypage_mission_record"
                android:textAppearance="@style/text_subtitle2"
                android:textColor="@color/color_font1"
                android:gravity="center_vertical"
                android:paddingStart="26dp"
                android:background="@drawable/btn_basic_8dp"
                android:backgroundTint="@color/color_sub2"
                android:layout_marginTop="24dp"
                android:layout_marginStart="20dp"
                style="@style/Widget.AppCompat.Button.Borderless"/>
        <View
                android:layout_width="321dp"
                android:layout_height="1dp"
                android:background="@color/color_sub2"
                android:layout_marginTop="16dp"
                android:layout_marginStart="20dp"/>
        <TextView
                android:layout_width="60dp"
                android:layout_height="22dp"
                android:text="@string/mypage_setting"
                android:textAppearance="@style/text_body1"
                android:textColor="@color/color_font1"
                android:layout_marginTop="15dp"
                android:layout_marginStart="20dp"/>
        <Button
                android:id="@+id/btn_qna"
                android:layout_width="321dp"
                android:layout_height="61dp"
                android:text="@string/mypage_qna"
                android:textAppearance="@style/text_body1"
                android:textColor="@color/color_font1"
                android:gravity="center_vertical"
                android:paddingStart="32dp"
                android:background="@drawable/btn_basic_8dp"
                android:backgroundTint="#CCFFFFFF"
                android:layout_marginTop="16dp"
                android:layout_marginStart="20dp"
                style="@style/Widget.AppCompat.Button.Borderless"/>
        <Button
                android:id="@+id/btn_account_setting"
                android:layout_width="321dp"
                android:layout_height="61dp"
                android:text="@string/mypage_account_setting"
                android:textAppearance="@style/text_body1"
                android:textColor="@color/color_font1"
                android:gravity="center_vertical"
                android:paddingStart="32dp"
                android:background="@drawable/btn_basic_8dp"
                android:backgroundTint="#CCFFFFFF"
                android:layout_marginTop="12dp"
                android:layout_marginStart="20dp"
                style="@style/Widget.AppCompat.Button.Borderless"/>
        <Button
                android:id="@+id/btn_private_policy"
                android:layout_width="321dp"
                android:layout_height="61dp"
                android:text="@string/mypage_privacy_policy"
                android:textAppearance="@style/text_body1"
                android:textColor="@color/color_font1"
                android:gravity="center_vertical"
                android:paddingStart="32dp"
                android:background="@drawable/btn_basic_8dp"
                android:backgroundTint="#CCFFFFFF"
                android:layout_marginTop="12dp"
                android:layout_marginStart="20dp"
                style="@style/Widget.AppCompat.Button.Borderless"/>
    </LinearLayout>
</FrameLayout>