<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context="presentation.mission.text.MissionTextFragment"
                                                   android:background="@color/color_mission_default">

    <!-- TODO: Update blank fragment layout -->
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/do_today_mission"
            android:textAppearance="@style/new_text_body3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="180dp" android:id="@+id/mission_top_text1"/>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/mission_top_text1"
            android:layout_marginTop="29dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:background="@drawable/round_box_12dp"
            android:backgroundTint="@color/color_mission_default"
            android:paddingTop="21dp" android:paddingBottom="41dp" android:paddingHorizontal="20dp"
            android:gravity="center_horizontal" android:id="@+id/text_mission_box" android:layout_marginHorizontal="27dp">
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:gravity="center"
                android:layout_marginBottom="32dp">
            <ImageView
                    android:src="@drawable/img_mission_text"
                    android:layout_width="67dp"
                    android:layout_height="67dp" android:id="@+id/imageView3" android:layout_weight="1"
                    android:layout_marginRight="15dp" android:scaleType="fitCenter"/>
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:layout_weight="3">
                <TextView
                        android:text="@string/mission_title_text"
                        android:layout_width="wrap_content"
                        android:textAppearance="@style/text_body2"
                        android:layout_height="wrap_content" android:id="@+id/textView7"
                        android:textColor="@color/color_font3"/>
                <View
                        android:id="@+id/divider"
                        android:layout_width="97dp"
                        android:layout_height="1dp"
                        android:background="?android:attr/listDivider"
                        android:layout_marginTop="4dp" android:layout_marginBottom="8dp"/>
                <TextView
                        android:text="@string/mission_body"
                        android:textAppearance="@style/new_text_body2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/textView8"/>
            </LinearLayout>
        </LinearLayout>
        <TextView
                android:text="@string/mission_diary_detail"
                android:layout_width="wrap_content"
                android:textAppearance="@style/text_body2"
                android:layout_height="wrap_content" android:id="@+id/textView4" android:layout_weight="1"
                android:textColor="@color/color_font2"/>
        <EditText
                android:id="@+id/mission_text_field"
                android:layout_width="match_parent"
                android:layout_height="166dp"
                android:background="@drawable/round_box_12dp"
                android:backgroundTint="@color/color_font4"
                android:privateImeOptions="defaultInputmode=korean"
                android:hint="@string/text_field_explain"
                android:textAppearance="@style/new_text_body3"
                android:textColorHint="@color/color_disabled1"
                android:textColor="@color/color_font2"
                android:maxLength="85"
                android:gravity="center_horizontal|top"
                android:paddingTop="20dp"
                android:layout_marginTop="12dp"
                android:paddingHorizontal="20dp" android:lineSpacingExtra="14sp" android:textAlignment="center"
                android:textAllCaps="false" android:paddingBottom="26dp" android:lines="4" android:lineHeight="30sp"/>
    </LinearLayout>
    <Button
            android:text="@string/show_tome"
            android:layout_width="match_parent"
            android:layout_height="48dp" android:id="@+id/show_to_text_btn"
            android:textAppearance="@style/text_body1"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginStart="27dp" android:layout_marginEnd="27dp"
            android:background="@drawable/btn_basic_8dp" android:backgroundTint="@color/color_disabled1"
            app:layout_constraintBottom_toTopOf="@+id/back_text_btn" android:layout_marginBottom="8dp"
            android:textColor="@color/color_font2" android:clickable="true" android:enabled="false"/>
    <Button
            android:text="@string/back_textfield"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/back_text_btn"
            android:textAppearance="@style/text_body1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="27dp"
            android:layout_marginEnd="27dp" android:background="@drawable/btn_basic_8dp"
            android:backgroundTint="@color/color_disabled1" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="64dp" android:textColor="@color/color_font2"/>

</androidx.constraintlayout.widget.ConstraintLayout>