<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView
            android:id="@+id/iv_visitor_lock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_visitor_lock"
            android:layout_marginTop="253dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
    <TextView
            android:id="@+id/tv_visitor_explain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/visitor"
            android:textAppearance="@style/text_body2"
            android:textColor="@color/color_font2"
            android:gravity="center"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_visitor_lock"/>
    <Button
            android:id="@+id/btn_sign_in"
            android:layout_width="180dp"
            android:layout_height="53dp"
            android:text="@string/sign_in"
            android:textAppearance="@style/text_body1"
            android:textColor="@color/color_font4"
            android:background="@drawable/btn_basic_8dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_visitor_explain"
            style="?android:attr/borderlessButtonStyle"/>
    <Button
            android:id="@+id/btn_close"
            android:layout_width="180dp"
            android:layout_height="53dp"
            android:text="@string/btn_close"
            android:textAppearance="@style/text_body1"
            android:background="@drawable/btn_basic_8dp"
            android:backgroundTint="@color/color_disabled2"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_sign_in"
            style="?android:attr/borderlessButtonStyle"/>
</androidx.constraintlayout.widget.ConstraintLayout>