<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="presentation.login.LoginActivity">
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="To Me"
            android:fontFamily="@font/ydestreetl"
            android:textSize="12sp"
            android:textColor="@color/color_font1"
            android:layout_marginTop="265dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

    <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_kakao"
            android:layout_width="308dp"
            android:layout_height="48dp"
            android:text="@string/login_kakao"
            android:textAppearance="@style/text_body1"
            android:textColor="@color/color_font1"
            android:background="@drawable/btn_kakao_yellow"
            android:layout_marginBottom="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/btn_google"
            style="?android:attr/borderlessButtonStyle"/>

    <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_google"
            android:layout_width="308dp"
            android:layout_height="48dp"
            android:textAllCaps="false"
            android:text="@string/login_google"
            android:textAppearance="@style/text_body1"
            android:textColor="@color/color_font1"
            android:background="@drawable/btn_google_transparent"
            android:layout_marginBottom="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/tv_visitor"
            style="?android:attr/borderlessButtonStyle"/>

    <TextView
            android:id="@+id/tv_visitor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_visitor"
            android:textAppearance="@style/text_body2"
            android:textColor="@color/color_font3"
            android:layout_marginBottom="22dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>