<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:clickable="true"
        android:paddingHorizontal="25dp"
        android:background="@color/color_disabled2">
    <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="18dp"
            android:layout_height="26dp"
            android:src="@drawable/ic_mypage_back"
            android:background="@color/color_transparent"
            android:padding="5dp"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

    <TextView
            android:id="@+id/tv_notification"
            android:layout_width="wrap_content"
            android:layout_height="34dp"
            android:text="@string/mypage_notification"
            android:textAppearance="@style/new_body1"
            android:textColor="@color/color_font1"
            android:gravity="center"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/btn_back"
            app:layout_constraintStart_toStartOf="parent"/>
    <TextView
            android:id="@+id/tv_notification_explain"
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            android:text="@string/notification_explain"
            android:textAppearance="@style/text_body2"
            android:textColor="@color/color_main"
            android:gravity="center_vertical"
            android:layout_marginTop="13dp"
            android:lineSpacingMultiplier="1.4"
            app:layout_constraintTop_toBottomOf="@id/tv_notification"
            app:layout_constraintStart_toStartOf="parent"/>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="39dp"
            app:layout_constraintTop_toBottomOf="@id/tv_notification_explain">

        <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/btn_switch"
                android:layout_width="match_parent"
                android:layout_height="24dp"
                android:checked="false"
                android:thumb="@drawable/switch_thumb"
                app:track="@drawable/switch_selector"

                app:thumbTextPadding="24dp"
                android:textOff=""
                android:textOn=""
                android:text="@string/notification_bool"
                android:textAppearance="@style/text_body1"
                android:textColor="@color/color_font1"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>