<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:clickable="true"
        android:paddingHorizontal="25dp"
        android:background="@color/color_disabled2">
    <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="18dp"
            android:layout_height="26dp"
            android:src="@drawable/ic_mypage_back"
            android:background="@color/color_transparent"
            android:padding="5dp"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
    
    <TextView
            android:id="@+id/tv_qna"
            android:layout_width="77dp"
            android:layout_height="34dp"
            android:text="@string/mypage_qna"
            android:textAppearance="@style/new_body1"
            android:textColor="@color/color_font1"
            android:gravity="center"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/btn_back"
            app:layout_constraintStart_toStartOf="parent"/>

    <TextView
            android:id="@+id/tv_qna_explain"
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            android:text="@string/qna_explain"
            android:textAppearance="@style/text_body2"
            android:textColor="@color/color_main"
            android:gravity="center_vertical"
            android:lineSpacingMultiplier="1.4"
            android:layout_marginTop="13dp"
            app:layout_constraintTop_toBottomOf="@id/tv_qna"
            app:layout_constraintStart_toStartOf="parent"/>
    <ImageView
            android:id="@+id/iv_qna"
            android:layout_width="283dp"
            android:layout_height="264dp"
            android:src="@drawable/img_mypage_qna"
            android:scaleType="centerCrop"
            android:layout_marginTop="93dp"
            app:layout_constraintTop_toBottomOf="@id/tv_qna_explain"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    <Button
            android:id="@+id/btn_kakao_plus"
            android:layout_width="308dp"
            android:layout_height="58dp"
            android:text="@string/kakao_plus_friend"
            android:textAppearance="@style/text_subtitle2"
            android:textColor="@color/color_font1"
            android:background="@drawable/btn_kakao_yellow"
            android:layout_marginBottom="46dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/Widget.AppCompat.Button.Borderless"/>
</androidx.constraintlayout.widget.ConstraintLayout>